[gd_scene load_steps=5 format=2]

[ext_resource path="res://v2ShooterEnemyZombie.gd" type="Script" id=2]
[ext_resource path="res://EnemyPlayerNew/Ghost.gltf" type="PackedScene" id=3]

[sub_resource type="CylinderShape" id=2]
radius = 11.2

[sub_resource type="CylinderShape" id=1]
radius = 0.8

[node name="v2BossShooterEnemyZombie" type="KinematicBody" groups=["Enemy"]]
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55474, 0 )
cast_to = Vector3( 0, 0, -6.42 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.242
one_shot = true
autostart = true

[node name="Launcher" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, -1.3105 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.25 )
shape = SubResource( 1 )

[node name="Ghost" parent="." instance=ExtResource( 3 )]
transform = Transform( -0.3, 0, -4.52987e-08, 0, 0.269, 0, 4.52987e-08, 0, -0.3, 0, 0, 0 )

[node name="Charge" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )
enabled = true
cast_to = Vector3( 0, 0, -11.2 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
